axum-debug/tests/fail/not_a_function.rs
use axum_debug::debug_handler;

#[debug_handler]
struct A;

fn main() {}
